ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-seasons.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: summer-svc
                port:
                  number: 80
